adds pin check, adds datafile cleanup
