# ContentTower.IntegrationTests/openapi.json
@@ -6,59 +6,16 @@
   },
   "servers": [
     {
-      "url": "http://localhost:5000/"
+      "url": "http://localhost:5135/"
     }
   ],
   "paths": {
-    "/Delete/{cid}": {
-      "delete": {
-        "tags": [
-          "Delete"
-        ],
-        "parameters": [
-          {
-            "name": "cid",
-            "in": "path",
-            "required": true,
-            "schema": {
-              "type": "string"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        }
-      }
-    },
-    "/Delete/force/{cid}": {
-      "delete": {
-        "tags": [
-          "Delete"
-        ],
-        "parameters": [
-          {
-            "name": "cid",
-            "in": "path",
-            "required": true,
-            "schema": {
-              "type": "string"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        }
-      }
-    },
     "/Download/download/{cid}": {
       "get": {
         "tags": [
           "Download"
         ],
+        "description": "Downloads content as a stream.",
         "parameters": [
           {
             "name": "cid",
@@ -88,6 +45,7 @@
         "tags": [
           "Download"
         ],
+        "description": "Retrieves metadata for content.",
         "parameters": [
           {
             "name": "cid",
@@ -104,17 +62,17 @@
             "content": {
               "text/plain": {
                 "schema": {
-                  "$ref": "#/components/schemas/FileMetadata"
+                  "$ref": "#/components/schemas/ContentView"
                 }
               },
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/FileMetadata"
+                  "$ref": "#/components/schemas/ContentView"
                 }
               },
               "text/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/FileMetadata"
+                  "$ref": "#/components/schemas/ContentView"
                 }
               }
             }
@@ -127,6 +85,7 @@
         "tags": [
           "Download"
         ],
+        "description": "Checks whether the content exists in this service.",
         "parameters": [
           {
             "name": "cid",
@@ -161,11 +120,217 @@
         }
       }
     },
+    "/Pin": {
+      "post": {
+        "tags": [
+          "Pin"
+        ],
+        "description": "Creates a new pin and attaches it to the specified contents.",
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/CreatePinRequest"
+              }
+            },
+            "text/json": {
+              "schema": {
+                "$ref": "#/components/schemas/CreatePinRequest"
+              }
+            },
+            "application/*+json": {
+              "schema": {
+                "$ref": "#/components/schemas/CreatePinRequest"
+              }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "text/plain": {
+                "schema": {
+                  "type": "string"
+                }
+              },
+              "application/json": {
+                "schema": {
+                  "type": "string"
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "type": "string"
+                }
+              }
+            }
+          }
+        }
+      },
+      "patch": {
+        "tags": [
+          "Pin"
+        ],
+        "description": "Attached content to or detaches content from the specified pin.",
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/UpdatePinRequest"
+              }
+            },
+            "text/json": {
+              "schema": {
+                "$ref": "#/components/schemas/UpdatePinRequest"
+              }
+            },
+            "application/*+json": {
+              "schema": {
+                "$ref": "#/components/schemas/UpdatePinRequest"
+              }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
+    "/Pin/{pinId}": {
+      "get": {
+        "tags": [
+          "Pin"
+        ],
+        "description": "Retrieves pin details.",
+        "parameters": [
+          {
+            "name": "pinId",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "text/plain": {
+                "schema": {
+                  "$ref": "#/components/schemas/PinView"
+                }
+              },
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/PinView"
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/PinView"
+                }
+              }
+            }
+          }
+        }
+      },
+      "delete": {
+        "tags": [
+          "Pin"
+        ],
+        "description": "Deletes a pin immediately. Not allowed for pins with StoreType 'Permanent'.",
+        "parameters": [
+          {
+            "name": "pinId",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
+    "/Pin/check/{pinId}": {
+      "get": {
+        "tags": [
+          "Pin"
+        ],
+        "description": "Checks whether the pin exists in this service.",
+        "parameters": [
+          {
+            "name": "pinId",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "text/plain": {
+                "schema": {
+                  "type": "boolean"
+                }
+              },
+              "application/json": {
+                "schema": {
+                  "type": "boolean"
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "type": "boolean"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/Pin/force/{pinId}": {
+      "delete": {
+        "tags": [
+          "Pin"
+        ],
+        "description": "Deletes a pin immediately. Explicit override for pins with StoreType 'Permanent'.",
+        "parameters": [
+          {
+            "name": "pinId",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
     "/Quota": {
       "get": {
         "tags": [
           "Quota"
         ],
+        "description": "Retrieves current quota status information.",
         "responses": {
           "200": {
             "description": "OK",
@@ -195,6 +360,7 @@
         "tags": [
           "Quota"
         ],
+        "description": "Retrieves ContentTower configuration information.",
         "responses": {
           "200": {
             "description": "OK",
@@ -224,6 +390,7 @@
         "tags": [
           "Upload"
         ],
+        "description": "Stores content in ContentTower. Creates new pins for the content if requested. Attaches existing pins to the content if requested.",
         "requestBody": {
           "content": {
             "application/json": {
@@ -271,22 +438,17 @@
   },
   "components": {
     "schemas": {
-      "Cid": {
-        "required": [
-          "hash"
-        ],
-        "type": "object",
-        "properties": {
-          "hash": {
-            "type": "string"
-          }
-        }
-      },
-      "FileMetadata": {
+      "ContentView": {
         "type": "object",
         "properties": {
           "cid": {
-            "$ref": "#/components/schemas/Cid"
+            "type": "string"
+          },
+          "pinIds": {
+            "type": "array",
+            "items": {
+              "type": "string"
+            }
           },
           "name": {
             "type": "string"
@@ -301,17 +463,20 @@
               "string"
             ],
             "format": "int64"
-          },
+          }
+        }
+      },
+      "CreatePinRequest": {
+        "type": "object",
+        "properties": {
           "storeType": {
-            "$ref": "#/components/schemas/StoreRequestType"
+            "$ref": "#/components/schemas/StoreType"
           },
-          "uploadUtc": {
-            "type": "string",
-            "format": "date-time"
-          },
-          "lastActivityUtc": {
-            "type": "string",
-            "format": "date-time"
+          "cids": {
+            "type": "array",
+            "items": {
+              "type": "string"
+            }
           }
         }
       },
@@ -360,6 +525,31 @@
           }
         }
       },
+      "PinView": {
+        "type": "object",
+        "properties": {
+          "pinId": {
+            "type": "string"
+          },
+          "storeType": {
+            "$ref": "#/components/schemas/StoreType"
+          },
+          "createUtc": {
+            "type": "string",
+            "format": "date-time"
+          },
+          "lastActivityUtc": {
+            "type": "string",
+            "format": "date-time"
+          },
+          "cids": {
+            "type": "array",
+            "items": {
+              "type": "string"
+            }
+          }
+        }
+      },
       "QuotaResponse": {
         "type": "object",
         "properties": {
@@ -387,23 +577,40 @@
       "QuotaState": {
         "type": "integer"
       },
-      "StoreRequestType": {
+      "StoreType": {
         "enum": [
           "Default",
-          "TemporaryFile",
-          "PermanentFile"
+          "Temporary",
+          "Permanent"
         ]
       },
       "Stream": {
         "type": "string",
         "format": "binary"
       },
+      "UpdatePinRequest": {
+        "type": "object",
+        "properties": {
+          "pinId": {
+            "type": "string"
+          },
+          "addCids": {
+            "type": "array",
+            "items": {
+              "type": "string"
+            }
+          },
+          "removeCids": {
+            "type": "array",
+            "items": {
+              "type": "string"
+            }
+          }
+        }
+      },
       "UploadRequest": {
         "type": "object",
         "properties": {
-          "storeType": {
-            "$ref": "#/components/schemas/StoreRequestType"
-          },
           "name": {
             "type": "string"
           },
@@ -413,14 +620,32 @@
           "data": {
             "type": "string",
             "format": "byte"
+          },
+          "attachExistingPinIds": {
+            "type": "array",
+            "items": {
+              "type": "string"
+            }
+          },
+          "createNewPins": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/StoreType"
+            }
           }
         }
       },
       "UploadResponse": {
         "type": "object",
         "properties": {
-          "contentId": {
+          "cid": {
             "type": "string"
+          },
+          "newPinIds": {
+            "type": "array",
+            "items": {
+              "type": "string"
+            }
           }
         }
       }
@@ -428,10 +653,10 @@
   },
   "tags": [
     {
-      "name": "Delete"
+      "name": "Download"
     },
     {
-      "name": "Download"
+      "name": "Pin"
     },
     {
       "name": "Quota"
